# rocketship

./: .env.example  .env.rocketship  .gitignore  .minikube-env  404.html  AGENTS.md  AUTH_README.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  CNAME  COMPLETE_PROFILE_SYSTEM_TEST_GUIDE.md  CONTRIBUTING.md  Dockerfile.agent  Dockerfile.engine  Dockerfile.worker  ENTERPRISE_SETUP_GUIDE.md  HTTPS_TESTING_GUIDE.md  HTTPS_VERIFICATION_PLAYBOOK.md  LICENSE  MASTER_PLAN.md  MINIKUBE_DEPLOYMENT_GUIDE.md  Makefile  PRODUCTION_DOCKER_HTTPS_GUIDE.md  PROFILE_TESTING_GUIDE.md  README-2.md  README.md  README.md.bak  ROCKETSHIP_AGENT_QUICKSTART.md  ROCKETSHIP_QUICKSTART.md  TESTING_GUIDE_AUTH0.md  TESTING_VERIFICATION_RBAC.md  WORKTREE_PROMPT_MCP.md  WORKTREE_PROMPT_RETRY.md  WORKTREE_PROMPT_TEMPLATE.md  ci-smoke.txt  go.mod  go.sum  index.html  mock-analysis.json  package-lock.json  (+23 more)
mcp-server/: .gitignore  DEPLOYMENT.md  INSTALL.md  LOCAL_TEST.md  README.md  SUMMARY.md  debug-cli-data.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  rocketshipai-mcp-server-0.1.0.tgz  test-cli-guidance.js  test-knowledge-embedding.js  test_server.py  tsconfig.json
mcp-server/examples/: codebase_analysis.json  mcp_usage_examples.md
mcp-server/examples/generated_test_structure/: staging-vars.yaml
mcp-server/examples/generated_test_structure/api-tests/: rocketship.yaml
mcp-server/scripts/: cli-introspection.js  embed-knowledge.js
mcp-server/src/: index-temp.ts  index.ts  test.ts
mcp-server/src/rocketship_mcp/: __init__.py  generators.py  server.py  types.py  utils.py
(+906 files in other folders)
